Feature/profile (#18)
* add: question and anwser model

* fix: delete succeffully a user

* add: question and responses
