# src/public/docs/openapi.yaml
@@ -43,26 +43,26 @@ paths:
                 lastname:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: zimc
+                  example: gggwnjcoraywbzpnayqrg
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: nqoiegzfbcdfymjxlbgvzgdhj
+                  example: euftmwlfnaf
                 password:
                   type: string
                   description: ''
-                  example: voluptatum
+                  example: accusamus
                 role_id:
                   type: string
                   description: ''
-                  example: '3'
+                  example: '2'
                   enum:
                     - '2'
                     - '3'
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: melyssa.veum@example.org
+                  example: jnader@example.net
               required:
                 - lastname
                 - name
@@ -89,11 +89,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: shaylee62@example.org
+                  example: jovany15@example.com
                 password:
                   type: string
                   description: ''
-                  example: est
+                  example: ut
               required:
                 - email
                 - password
@@ -139,15 +139,15 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: sanford.raymond@example.com
+                  example: katrina.stanton@example.com
                 name:
                   type: string
                   description: ''
-                  example: voluptatem
+                  example: debitis
                 lastname:
                   type: string
                   description: ''
-                  example: dolores
+                  example: cupiditate
               required:
                 - email
                 - name
@@ -172,11 +172,11 @@ paths:
                 current_password:
                   type: string
                   description: ''
-                  example: similique
+                  example: dolore
                 password:
                   type: string
                   description: ''
-                  example: nihil
+                  example: soluta
               required:
                 - current_password
                 - password
@@ -185,6 +185,16 @@ paths:
     post:
       summary: ''
       operationId: postApiV1Logout
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+  /api/v1/delete/profil:
+    delete:
+      summary: ''
+      operationId: deleteApiV1DeleteProfil
       description: ''
       parameters: []
       responses: {  }
@@ -254,22 +264,22 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: alias
+                  example: necessitatibus
                 points:
                   type: integer
                   description: ''
-                  example: 1
+                  example: 18
                 slug:
                   type: string
                   description: ''
-                  example: non
+                  example: ut
               required:
                 - name
       security: []
   /api/v1/levels:
     get:
-      summary: ''
-      operationId: getApiV1Levels
+      summary: 'récupération de tous les levels(niveaux) récupére une collection de données et pas une seule donnée'
+      operationId: rcuprationDeTousLesLevelsniveauxRcupreUneCollectionDeDonnesEtPasUneSeuleDonne
       description: ''
       parameters: []
       responses:
@@ -307,10 +317,74 @@ paths:
                 slug:
                   type: string
                   description: ''
-                  example: soluta
+                  example: aspernatur
               required:
                 - slug
       security: []
+  /api/v1/domains:
+    get:
+      summary: 'Display a listing of the resource.'
+      operationId: displayAListingOfTheResource
+      description: ''
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+      security: []
+  /api/v1/domain/store:
+    post:
+      summary: 'Store a newly created resource in storage.'
+      operationId: storeANewlyCreatedResourceInStorage
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: ''
+                  example: quidem
+              required:
+                - name
+      security: []
+  '/api/v1/domain/delete/{id}':
+    delete:
+      summary: 'Remove the specified resource from storage.'
+      operationId: removeTheSpecifiedResourceFromStorage
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      security: []
+    parameters:
+      -
+        in: path
+        name: id
+        description: 'The ID of the delete.'
+        example: adipisci
+        required: true
+        schema:
+          type: string
 tags:
   -
     name: Endpoints
